[package]
name = "ifstat-rs"
version = "0.1.0"
edition = "2021"
publish = false

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
anyhow = "1.0"
chrono  = { version = "0.4.23", features = ["serde"] }
clap  = { version = "4.1.4", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
serde  = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
