[package]
name = "ifstat-rs"
version = "1.1.0"
edition = "2021"
publish = false
license = "ISC"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.16", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
